--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,56 +44,77 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Upload build artifact
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: TimberZ-jar
-          path: build/libs/TimberZ-${{ github.event.release.tag_name }}.jar
+          name: TimberZ-jars
+          path: |
+            build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.4.jar
+            build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.9.jar
 
   upload_release_asset:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download build artifact
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: TimberZ-jar
+          name: TimberZ-jars
           path: build/libs/
 
-      - name: Upload JAR to GitHub Release
+      - name: Upload JARs to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: build/libs/TimberZ-${{ github.event.release.tag_name }}.jar
+          files: |
+            build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.4.jar
+            build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.9.jar
           body: ${{ github.event.release.body }}
 
   publish_modrinth:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download build artifact
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: TimberZ-jar
+          name: TimberZ-jars
           path: build/libs/
 
-      - name: Publish to Modrinth
+      - name: Publish 1.21.4 JAR to Modrinth
         uses: cloudnode-pro/modrinth-publish@v2
         with:
           token: ${{ secrets.MODRINTH_TOKEN }}
           project: 'hjNMOOnF'
-          version: ${{ github.event.release.tag_name }}
-          name: 'TimberZ ${{ github.event.release.tag_name }}'
+          version: ${{ github.event.release.tag_name }}-1.21.4
+          name: 'TimberZ ${{ github.event.release.tag_name }} (1.21.4-1.21.8)'
           changelog: ${{ github.event.release.body }}
-          files: '["build/libs/TimberZ-${{ github.event.release.tag_name }}.jar"]'
+          files: '["build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.4.jar"]'
           loaders: |-
             paper
             purpur
           game-versions: |-
-            1.21.3
             1.21.4
             1.21.5
             1.21.6
             1.21.7
             1.21.8
+          status: 'listed'
+          channel: 'release'
+
+      - name: Publish 1.21.9 JAR to Modrinth
+        uses: cloudnode-pro/modrinth-publish@v2
+        with:
+          token: ${{ secrets.MODRINTH_TOKEN }}
+          project: 'hjNMOOnF'
+          version: ${{ github.event.release.tag_name }}-1.21.9
+          name: 'TimberZ ${{ github.event.release.tag_name }} (>1.21.9)'
+          changelog: ${{ github.event.release.body }}
+          files: '["build/libs/TimberZ-${{ github.event.release.tag_name }}-1.21.9.jar"]'
+          loaders: |-
+            paper
+            purpur
+          game-versions: |-
+            1.21.9
+            1.21.10
           status: 'listed'
           channel: 'release'
