--- a/run/server.properties
+++ b/run/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Jun 24 13:45:22 CEST 2025
+#Thu Oct 09 10:54:58 CEST 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -8,6 +8,7 @@ broadcast-rcon-to-ops=true
 bug-report-link=
 debug=false
 difficulty=easy
+enable-code-of-conduct=false
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -29,6 +30,13 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 log-ips=true
+management-server-enabled=false
+management-server-host=localhost
+management-server-port=0
+management-server-secret=XwMsNt4u8RQ9HL1Tc7Ac2ox4c94NIrCgVMFtcjlW
+management-server-tls-enabled=true
+management-server-tls-keystore=
+management-server-tls-keystore-password=
 max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
@@ -56,6 +64,7 @@ server-port=25561
 simulation-distance=10
 spawn-monsters=true
 spawn-protection=16
+status-heartbeat-interval=0
 sync-chunk-writes=true
 text-filtering-config=
 text-filtering-version=0
