--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ repositories {
     maven { name = "sonatype"; url = "https://oss.sonatype.org/content/groups/public/" }
     maven { url "https://maven.enginehub.org/repo/" }
     maven { url = 'https://repo.extendedclip.com/releases/' }
+    maven { url = "https://maven.zetaplugins.com/" }
 }
 
 def targetJavaVersion = 21
@@ -83,6 +84,8 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.11.6'
     compileOnly 'dev.aurelium:auraskills-api-bukkit:2.2.4'
     implementation "com.fasterxml.jackson.core:jackson-databind:2.16.1"
+
+    implementation "com.zetaplugins:zetacore:1.7.1"
 
     compileOnly "io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT"
 
