--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,9 @@ tasks.register('buildMC1214', Jar) {
     from sourceSets.mc1214.output
     from sourceSets.main.output
 
-    from(configurations.shadow)
+    from{configurations.shadow.collect{zipTree(it)}}
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 tasks.register('buildMC1219', Jar) {
